kubernetes/sage-auth.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sage-auth
  annotations:
    traefik.ingress.kubernetes.io/router.tls: ""
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: sage-auth-static
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sage-auth
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sage-auth
spec:
  ports:
  - name: web
    port: 80
    targetPort: 8000
  selector:
    k8s-app: sage-auth
---
apiVersion: v1
kind: Service
metadata:
  name: sage-auth-static
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    k8s-app: sage-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sage-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sage-auth
  template:
    metadata:
      labels:
        k8s-app: sage-auth
    spec:
      containers:
      - image: waggle/sage-auth:latest
        name: sage-auth
        command:
          - ash
          - -c
          - while [ $(nc -zv ${MYSQL_HOST} 3306; echo $?) != 0 ] ;
            do echo "wait..." ; sleep 2; done ; python3 manage.py migrate ;
           python3 manage.py collectstatic --no-input ;
           python3 manage.py runserver 0.0.0.0:8000
        ports:
        - containerPort: 8000
        volumeMounts:
          - name: static-files
            mountPath: /usr/src/app/webapp/webapp/static_root
      - image: nginx:1.20-alpine
        name: sage-auth-static
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
          - name: static-files
            mountPath: /usr/share/nginx/html/static/
            readOnly: true
      restartPolicy: Always
      volumes:
      - name: static-files
        emptyDir: {}
