kubernetes/sage-ui.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sage-ui
  annotations:
    traefik.ingress.kubernetes.io/router.tls: ""
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sage-ui
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sage-ui
spec:
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    k8s-app: sage-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sage-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: sage-ui
  template:
    metadata:
      labels:
        k8s-app: sage-ui
    spec:
      containers:
      - image: sagecontinuum/sage-ui:latest
        name: sage-ui
        command:
          - ash
          - -c
          - while [ $(nc -zv ${MYSQL_HOST} 3306; echo $?) != 0 ] ;
            do echo "wait..." ; sleep 2; done ; python manage.py migrate ;
           python manage.py runserver 0.0.0.0:80
        ports:
        - containerPort: 80
      restartPolicy: Always
